--- a/plugins/mixpanelevents/public/mixpanelevents.css
+++ b/plugins/mixpanelevents/public/mixpanelevents.css
@@ -10,7 +10,17 @@
   background-color: #f1f1f1;
 }
 
+.mixpanelevents .widget-content {
+  display: table;
+  width: 100%;
+  height: 100%;
+  margin-top: -20px;
+  padding: 0 10px 0 10px;
+}
+
 .mixpanelevents .big-label {
+  display: table-cell;
+  vertical-align: middle;
   color: #333;
   line-height: 100%;
 }
