--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19,6 +19,38 @@ body > .container {
   border: 1px solid black;
 }
 
+.widget-header {
+  width: 100%;
+  height: 20px;
+}
+
+.widget-title {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 0 20px 0 4px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.widget-settings-btn {
+  position: absolute;
+  top: 2px;
+  right: 2px;
+  width: 14px;
+  height: 14px;
+}
+
+.widget-content {
+  position: absolute;
+  top: 20px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
 .gridster {
   width: 100%;
   margin: 0 auto;
