--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17,11 +17,14 @@ body > .container {
 
 .widget {
   border: 1px solid black;
+  overflow: hidden;
 }
 
 .widget-header {
+  position: relative;
   width: 100%;
   height: 20px;
+  z-index: 1;
 }
 
 .widget-title {
@@ -49,6 +52,63 @@ body > .container {
   bottom: 0;
   left: 0;
   right: 0;
+}
+
+.edit-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  background-color: rgba(255,255,255,0.85);
+  z-index: 1000;
+
+  display: none;
+}
+
+.edit-overlay .close {
+  margin-right: 5px;
+}
+
+.edit-overlay .delete {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 70px;
+  height: 30px;
+  margin-top: -15px;
+  margin-left: -35px;
+}
+
+.edit-overlay .arrow {
+  position: absolute;
+  width: 44px;
+  height: 44px;
+}
+
+.edit-overlay .up {
+  top: 0;
+  left: 50%;
+  margin-left: -22px;
+}
+
+.edit-overlay .left {
+  top: 50%;
+  left: 0;
+  margin-top: -22px;
+}
+
+.edit-overlay .right {
+  top: 50%;
+  right: 0;
+  margin-top: -22px;
+}
+
+.edit-overlay .down {
+  bottom: 0;
+  left: 50%;
+  margin-left: -22px;
 }
 
 .gridster {
