--- a/public/css/app.css
+++ b/public/css/app.css
@@ -28,7 +28,7 @@ h1, h2, h3, h4, h5, p {
   text-align: center;
 }
 
-.widget .title {
+.widget > .title {
   color: rgba(255, 255, 255, 0.7);
   margin-bottom: 12px;
   text-align: center;
